# lite-pack

./: .gitignore  Cargo.toml  Makefile  README.md  deny.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/workflows/: check.yml
crates/bench/: Cargo.toml
crates/binding/: Cargo.toml  index.js  package.json
crates/binding/npm/darwin-x64/: README.md  package.json
crates/binding/npm/linux-x64-gnu/: README.md  package.json
crates/binding/npm/win32-x64-msvc/: README.md  package.json
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/core/: Cargo.toml
crates/core/benches/: build.rs
crates/core/src/: build.rs  cli.rs  compilation.rs  compiler.rs  config.rs  error.rs  lib.rs  log.rs  main.rs
