[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core"}
clap = {version = "4.0", features=["derive"]}
tracing = "0.1"
anyhow ="1.0.65"
color-eyre ="0.6.2"
tracing-error = "0.2.0"