[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
anyhow ="1.0.65"
clap = {version = "4.0", features=["derive"]}
tracing = "0.1"
tracing-subscriber = {version="0.3", features=["env-filter"]}
tracing-chrome = "0.6.0" 