[package]
name = "core"
version = "0.1.0"
edition = "2021"
[lib]
name = "core"
crate-type = ["lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
anyhow ="1.0.65"

tracing = "0.1"
tracing-subscriber = {version="0.3", features=["env-filter"]}
tracing-chrome = "0.6.0" 
tracing-error = "0.2.0"
color-eyre = "0.6.2"
serde = "1.0.145"
serde_json = "1.0.85"

[dev-dependencies]
criterion = {version = "0.4"}

[[bench]]
name = "build"
harness = false